# APS-C-tmp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  dados.txt  deps.mk  makefile
inc/: so_defs.h
src/: aleatorio.c  aleatorio.h  algoritimo.h  algs_ordenacao.c  algs_ordenacao.h  binary_insertion_sort.h  bubble_sort.c  bubble_sort.h  bucket_sort.c  bucket_sort.h  cmd_params.c  cmd_params.h  geracao_dados.c  geracao_dados.h  insertion_sort.c  insertion_sort.h  ler_arquivo.c  ler_arquivo.h  lista_linhas.c  lista_linhas.h  main.c  merge_sort.c  merge_sort.h  ordenacao_bolha.c  ordenacao_bolha.h  quick_sort.c  quick_sort.h  resultados.c  resultados.h  select_sort.c  select_sort.h  temporizacao.c  temporizacao.h
src/opengl/: grafico.c  grafico.h  opengl-pch.h  renderer.c  renderer.h  renderer_defs.h
src/sort/: binary_insertion_sort.c  binary_insertion_sort.h  bubble_sort.h  bucket_sort.c  bucket_sort.h  heap_sort.c  heap_sort.h  heap_sort_impl.h  insertion_sort.h  merge_sort.h  quick_sort.c  quick_sort.h  select_sort.c  select_sort.h
